COS013/Terceiro Trabalho/npr.output
Terminais sem uso na gramática

    CONST
    VAR
    PRINT
    FOR


Estado 10 conflitos: 1 de deslocamento/redução
Estado 50 conflitos: 1 de deslocamento/redução
Estado 52 conflitos: 10 de deslocamento/redução
Estado 54 conflitos: 3 de deslocamento/redução
Estado 55 conflitos: 3 de deslocamento/redução
Estado 56 conflitos: 10 de deslocamento/redução
Estado 57 conflitos: 3 de deslocamento/redução
Estado 58 conflitos: 3 de deslocamento/redução
Estado 59 conflitos: 3 de deslocamento/redução
Estado 60 conflitos: 3 de deslocamento/redução
Estado 61 conflitos: 3 de deslocamento/redução
Estado 62 conflitos: 3 de deslocamento/redução
Estado 63 conflitos: 3 de deslocamento/redução
Estado 72 conflitos: 14 de redução/redução
Estado 75 conflitos: 2 de redução/redução
Estado 76 conflitos: 2 de redução/redução


Gramática

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMDs CMD
    3     | ε

    4 CMD: CMD_LET ';'
    5    | CMD_IF
    6    | '{' CMDs '}'
    7    | Expr ';'

    8 CMD_LET: LET LET_VARs

    9 LET_VARs: LET_VAR ',' LET_VARs
   10         | LET_VAR

   11 LET_VAR: ID
   12        | ID '=' '{' '}'
   13        | ID '=' '[' ']'
   14        | ID '=' Expr

   15 CMD_IF: IF '(' Expr ')' CMD ELSE CMD

   16 LVALUE: ID

   17 LVALUEPROP: Expr '[' Expr ']'
   18           | Expr '.' LVALUE

   19 Expr: LVALUE '=' '{' '}'
   20     | LVALUE '=' Expr
   21     | LVALUEPROP '=' Expr
   22     | Expr ST Expr
   23     | Expr GT Expr
   24     | Expr '+' Expr
   25     | Expr '-' Expr
   26     | Expr '*' Expr
   27     | Expr '/' Expr
   28     | Expr '%' Expr
   29     | Expr DOUBLE_EQUAL Expr
   30     | LVALUE PLUS_EQUAL Expr
   31     | DOUBLE_PLUS LVALUE
   32     | LVALUE DOUBLE_PLUS
   33     | NUM
   34     | STRING
   35     | LVALUE
   36     | LVALUEPROP
   37     | '(' Expr ')'
   38     | '(' '{' '}' ')'
   39     | '{' '}'
   40     | '[' ']'


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '%' (37) 28
    '(' (40) 15 37 38
    ')' (41) 15 37 38
    '*' (42) 26
    '+' (43) 24
    ',' (44) 9
    '-' (45) 25
    '.' (46) 18
    '/' (47) 27
    ';' (59) 4 7
    '=' (61) 12 13 14 19 20 21
    '[' (91) 13 17 40
    ']' (93) 13 17 40
    '{' (123) 6 12 19 38 39
    '}' (125) 6 12 19 38 39
    error (256)
    ID (258) 11 12 13 14 16
    IF (259) 15
    ELSE (260) 15
    LET (261) 8
    CONST (262)
    VAR (263)
    PRINT (264)
    FOR (265)
    STRING (266) 34
    NUM (267) 33
    DOUBLE_EQUAL (268) 29
    PLUS_EQUAL (269) 30
    DOUBLE_PLUS (270) 31 32
    GT (271) 23
    ST (272) 22


Não terminais com as regras onde eles aparecem

    $accept (33)
        à esquerda: 0
    S (34)
        à esquerda: 1
        à direita: 0
    CMDs (35)
        à esquerda: 2 3
        à direita: 1 2 6
    CMD (36)
        à esquerda: 4 5 6 7
        à direita: 2 15
    CMD_LET (37)
        à esquerda: 8
        à direita: 4
    LET_VARs (38)
        à esquerda: 9 10
        à direita: 8 9
    LET_VAR (39)
        à esquerda: 11 12 13 14
        à direita: 9 10
    CMD_IF (40)
        à esquerda: 15
        à direita: 5
    LVALUE (41)
        à esquerda: 16
        à direita: 18 19 20 30 31 32 35
    LVALUEPROP (42)
        à esquerda: 17 18
        à direita: 21 36
    Expr (43)
        à esquerda: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        à direita: 7 14 15 17 18 20 21 22 23 24 25 26 27 28 29 30 37


Estado 0

    0 $accept: • S $end

    $padrão  reduzir usando a regra 3 (CMDs)

    S     ir ao estado 1
    CMDs  ir ao estado 2


Estado 1

    0 $accept: S • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    1 S: CMDs •
    2 CMDs: CMDs • CMD

    ID           deslocar, e ir ao estado 4
    IF           deslocar, e ir ao estado 5
    LET          deslocar, e ir ao estado 6
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 10
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 1 (S)

    CMD         ir ao estado 13
    CMD_LET     ir ao estado 14
    CMD_IF      ir ao estado 15
    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 18


Estado 3

    0 $accept: S $end •

    $padrão  aceitar


Estado 4

   16 LVALUE: ID •

    $padrão  reduzir usando a regra 16 (LVALUE)


Estado 5

   15 CMD_IF: IF • '(' Expr ')' CMD ELSE CMD

    '('  deslocar, e ir ao estado 19


Estado 6

    8 CMD_LET: LET • LET_VARs

    ID  deslocar, e ir ao estado 20

    LET_VARs  ir ao estado 21
    LET_VAR   ir ao estado 22


Estado 7

   34 Expr: STRING •

    $padrão  reduzir usando a regra 34 (Expr)


Estado 8

   33 Expr: NUM •

    $padrão  reduzir usando a regra 33 (Expr)


Estado 9

   31 Expr: DOUBLE_PLUS • LVALUE

    ID  deslocar, e ir ao estado 4

    LVALUE  ir ao estado 23


Estado 10

    6 CMD: '{' • CMDs '}'
   39 Expr: '{' • '}'

    '}'  deslocar, e ir ao estado 24

    '}'      [reduzir usando a regra 3 (CMDs)]
    $padrão  reduzir usando a regra 3 (CMDs)

    CMDs  ir ao estado 25


Estado 11

   40 Expr: '[' • ']'

    ']'  deslocar, e ir ao estado 26


Estado 12

   37 Expr: '(' • Expr ')'
   38     | '(' • '{' '}' ')'

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 27
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 28


Estado 13

    2 CMDs: CMDs CMD •

    $padrão  reduzir usando a regra 2 (CMDs)


Estado 14

    4 CMD: CMD_LET • ';'

    ';'  deslocar, e ir ao estado 29


Estado 15

    5 CMD: CMD_IF •

    $padrão  reduzir usando a regra 5 (CMD)


Estado 16

   19 Expr: LVALUE • '=' '{' '}'
   20     | LVALUE • '=' Expr
   30     | LVALUE • PLUS_EQUAL Expr
   32     | LVALUE • DOUBLE_PLUS
   35     | LVALUE •

    PLUS_EQUAL   deslocar, e ir ao estado 30
    DOUBLE_PLUS  deslocar, e ir ao estado 31
    '='          deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 35 (Expr)


Estado 17

   21 Expr: LVALUEPROP • '=' Expr
   36     | LVALUEPROP •

    '='  deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 36 (Expr)


Estado 18

    7 CMD: Expr • ';'
   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   22 Expr: Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    ';'           deslocar, e ir ao estado 42
    '['           deslocar, e ir ao estado 43
    '.'           deslocar, e ir ao estado 44


Estado 19

   15 CMD_IF: IF '(' • Expr ')' CMD ELSE CMD

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 46


Estado 20

   11 LET_VAR: ID •
   12        | ID • '=' '{' '}'
   13        | ID • '=' '[' ']'
   14        | ID • '=' Expr

    '='  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 11 (LET_VAR)


Estado 21

    8 CMD_LET: LET LET_VARs •

    $padrão  reduzir usando a regra 8 (CMD_LET)


Estado 22

    9 LET_VARs: LET_VAR • ',' LET_VARs
   10         | LET_VAR •

    ','  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 10 (LET_VARs)


Estado 23

   31 Expr: DOUBLE_PLUS LVALUE •

    $padrão  reduzir usando a regra 31 (Expr)


Estado 24

   39 Expr: '{' '}' •

    $padrão  reduzir usando a regra 39 (Expr)


Estado 25

    2 CMDs: CMDs • CMD
    6 CMD: '{' CMDs • '}'

    ID           deslocar, e ir ao estado 4
    IF           deslocar, e ir ao estado 5
    LET          deslocar, e ir ao estado 6
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 10
    '}'          deslocar, e ir ao estado 49
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    CMD         ir ao estado 13
    CMD_LET     ir ao estado 14
    CMD_IF      ir ao estado 15
    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 18


Estado 26

   40 Expr: '[' ']' •

    $padrão  reduzir usando a regra 40 (Expr)


Estado 27

   38 Expr: '(' '{' • '}' ')'
   39     | '{' • '}'

    '}'  deslocar, e ir ao estado 50


Estado 28

   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   22 Expr: Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr
   37     | '(' Expr • ')'

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    ')'           deslocar, e ir ao estado 51
    '.'           deslocar, e ir ao estado 44


Estado 29

    4 CMD: CMD_LET ';' •

    $padrão  reduzir usando a regra 4 (CMD)


Estado 30

   30 Expr: LVALUE PLUS_EQUAL • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 52


Estado 31

   32 Expr: LVALUE DOUBLE_PLUS •

    $padrão  reduzir usando a regra 32 (Expr)


Estado 32

   19 Expr: LVALUE '=' • '{' '}'
   20     | LVALUE '=' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 53
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 54


Estado 33

   21 Expr: LVALUEPROP '=' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 55


Estado 34

   29 Expr: Expr DOUBLE_EQUAL • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 56


Estado 35

   23 Expr: Expr GT • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 57


Estado 36

   22 Expr: Expr ST • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 58


Estado 37

   25 Expr: Expr '-' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 59


Estado 38

   24 Expr: Expr '+' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 60


Estado 39

   26 Expr: Expr '*' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 61


Estado 40

   27 Expr: Expr '/' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 62


Estado 41

   28 Expr: Expr '%' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 63


Estado 42

    7 CMD: Expr ';' •

    $padrão  reduzir usando a regra 7 (CMD)


Estado 43

   17 LVALUEPROP: Expr '[' • Expr ']'

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 45
    '['          deslocar, e ir ao estado 11
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 64


Estado 44

   18 LVALUEPROP: Expr '.' • LVALUE

    ID  deslocar, e ir ao estado 4

    LVALUE  ir ao estado 65


Estado 45

   39 Expr: '{' • '}'

    '}'  deslocar, e ir ao estado 24


Estado 46

   15 CMD_IF: IF '(' Expr • ')' CMD ELSE CMD
   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   22 Expr: Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    ')'           deslocar, e ir ao estado 66
    '.'           deslocar, e ir ao estado 44


Estado 47

   12 LET_VAR: ID '=' • '{' '}'
   13        | ID '=' • '[' ']'
   14        | ID '=' • Expr

    ID           deslocar, e ir ao estado 4
    STRING       deslocar, e ir ao estado 7
    NUM          deslocar, e ir ao estado 8
    DOUBLE_PLUS  deslocar, e ir ao estado 9
    '{'          deslocar, e ir ao estado 67
    '['          deslocar, e ir ao estado 68
    '('          deslocar, e ir ao estado 12

    LVALUE      ir ao estado 16
    LVALUEPROP  ir ao estado 17
    Expr        ir ao estado 69


Estado 48

    9 LET_VARs: LET_VAR ',' • LET_VARs

    ID  deslocar, e ir ao estado 20

    LET_VARs  ir ao estado 70
    LET_VAR   ir ao estado 22


Estado 49

    6 CMD: '{' CMDs '}' •

    $padrão  reduzir usando a regra 6 (CMD)


Estado 50

   38 Expr: '(' '{' '}' • ')'
   39     | '{' '}' •

    ')'  deslocar, e ir ao estado 71

    ')'      [reduzir usando a regra 39 (Expr)]
    $padrão  reduzir usando a regra 39 (Expr)


Estado 51

   37 Expr: '(' Expr ')' •

    $padrão  reduzir usando a regra 37 (Expr)


Estado 52

   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   22 Expr: Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr
   30     | LVALUE PLUS_EQUAL Expr •

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    '.'           deslocar, e ir ao estado 44

    DOUBLE_EQUAL  [reduzir usando a regra 30 (Expr)]
    GT            [reduzir usando a regra 30 (Expr)]
    ST            [reduzir usando a regra 30 (Expr)]
    '-'           [reduzir usando a regra 30 (Expr)]
    '+'           [reduzir usando a regra 30 (Expr)]
    '*'           [reduzir usando a regra 30 (Expr)]
    '/'           [reduzir usando a regra 30 (Expr)]
    '%'           [reduzir usando a regra 30 (Expr)]
    '['           [reduzir usando a regra 30 (Expr)]
    '.'           [reduzir usando a regra 30 (Expr)]
    $padrão       reduzir usando a regra 30 (Expr)


Estado 53

   19 Expr: LVALUE '=' '{' • '}'
   39     | '{' • '}'

    '}'  deslocar, e ir ao estado 72


Estado 54

   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   20 Expr: LVALUE '=' Expr •
   22     | Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    '.'           deslocar, e ir ao estado 44

    DOUBLE_EQUAL  [reduzir usando a regra 20 (Expr)]
    '['           [reduzir usando a regra 20 (Expr)]
    '.'           [reduzir usando a regra 20 (Expr)]
    $padrão       reduzir usando a regra 20 (Expr)


Estado 55

   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   21 Expr: LVALUEPROP '=' Expr •
   22     | Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    '.'           deslocar, e ir ao estado 44

    DOUBLE_EQUAL  [reduzir usando a regra 21 (Expr)]
    '['           [reduzir usando a regra 21 (Expr)]
    '.'           [reduzir usando a regra 21 (Expr)]
    $padrão       reduzir usando a regra 21 (Expr)


Estado 56

   17 LVALUEPROP: Expr • '[' Expr ']'
   18           | Expr • '.' LVALUE
   22 Expr: Expr • ST Expr
   23     | Expr • GT Expr
   24     | Expr • '+' Expr
   25     | Expr • '-' Expr
   26     | Expr • '*' Expr
   27     | Expr • '/' Expr
   28     | Expr • '%' Expr
   29     | Expr • DOUBLE_EQUAL Expr
   29     | Expr DOUBLE_EQUAL Expr •

    DOUBLE_EQUAL  deslocar, e ir ao estado 34
    GT            deslocar, e ir ao estado 35
    ST            deslocar, e ir ao estado 36
    '-'           deslocar, e ir ao estado 37
    '+'           deslocar, e ir ao estado 38
    '*'           deslocar, e ir ao estado 39
    '/'           deslocar, e ir ao estado 40
    '%'           deslocar, e ir ao estado 41
    '['           deslocar, e ir ao estado 43
    '.'           deslocar, e ir ao estado 44
